@@ -91,6 +91,9 @@
       \code{POSIXlt} now correctly obeys \code{getOption("max.print")},
       fixing a long-standing typo, and it also gets a corresponding
       optional \code{max} argument.
+
+      \item Unserialization of raw vectors serialized in ASCII
+      representation now works correctly.
     }
   }
 }
